syntax = "proto3";

package storage;

option go_package = "infoblox-training-task-3/storage/pkg/pb;pb";

service Storage {
  rpc Get (GetRequest) returns (GetResponse) {}
}

message GetRequest {
  string command = 1;
  string value = 2;
  string service = 3;
}

message GetResponse {
  string response = 1;
  string service = 2;
}
